# xlxd-evo

./: .gitignore  Makefile  README.md
ambed/: CMakeLists.txt  config.h.in  main.h  prep-ftdi
config/: Makefile
dashboard/: changes.txt  index.php
dashboard/pgs/: class.reflector.php  config.inc.php  functions.php  reflectors.php  repeaters.php  users.php
debian/: changelog  control  copyright  xlxd-evo-ambed.install  xlxd-evo-ambed.postinst  xlxd-evo.install  xlxd-evo.postinst
src/: CMakeLists.txt  cg3protocol.cpp  config.h.in  cysfprotocol.cpp  main.h
systemd/: Makefile  ambed-start  ambed.default  ambed.service  xlxd-start  xlxd.default  xlxd.service
